--- a/index.html
+++ b/index.html
@@ -28,37 +28,42 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
+      <h3>Example cPanel Widget</h3>
+        <form method="post" action="https://www.test.securepaynet-net.ide/gdshop/xt_orderform_addmany.asp?app_hdr=">
+      <input type="hidden" name="tcount" value="1">
+      <input type="hidden" name="qty_1" value="1">
+      <input type="hidden" name="item_1" value="1">
+      <input type="hidden" name="prog_id" value="domainspricedright"> <!-- enter your prog_id -->
+      <select name="pf_id_1">
+        <option value="32048">Economy - Linux cPanel - US Region - Monthly (recurring)</option>
+        <option value="32051">Economy - Linux cPanel - US Region - 1 years (recurring)</option>
+        <option value="32060">Economy - Linux cPanel - US Region - 2 years (recurring)</option>
+        <option value="32063">Economy - Linux cPanel - US Region - 3 years (recurring)</option>
+        <option value="32066">Economy - Linux cPanel - US Region - 4 years (recurring)</option>
+        <option value="32069">Economy - Linux cPanel - US Region - 5 years (recurring)</option>
+        <option value="32072">Economy - Linux cPanel - US Region - 10 years (recurring)</option>
+        <option value="32050">Deluxe - Linux cPanel - US Region - Monthly (recurring)</option>
+        <option value="32059">Deluxe - Linux cPanel - US Region - 1 years (recurring)</option>
+        <option value="32062">Deluxe - Linux cPanel - US Region - 2 years (recurring)</option>
+        <option value="32065">Deluxe - Linux cPanel - US Region - 3 years (recurring)</option>
+        <option value="32068">Deluxe - Linux cPanel - US Region - 4 years (recurring)</option>
+        <option value="32071">Deluxe - Linux cPanel - US Region - 5 years (recurring)</option>
+        <option value="32074">Deluxe - Linux cPanel - US Region - 10 years (recurring)</option>
+        <option value="32076">Ultimate - Linux cPanel - US Region - Monthly (recurring)</option>
+        <option value="32082">Ultimate - Linux cPanel - US Region - 1 years (recurring)</option>
+        <option value="32084">Ultimate - Linux cPanel - US Region - 2 years (recurring)</option>
+        <option value="32086">Ultimate - Linux cPanel - US Region - 3 years (recurring)</option>
+        <option value="32088">Ultimate - Linux cPanel - US Region - 4 years (recurring)</option>
+        <option value="32090">Ultimate - Linux cPanel - US Region - 5 years (recurring)</option>
+        <option value="32092">Ultimate - Linux cPanel - US Region - 10 years (recurring)</option>
+      </select>
+      <input type="submit" value="Add To Cart">
+    </form>
+  <br>
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Having trouble with Pages? Check out the documentation at <a href="http://github.com/resellers/cpanel-widget">http://github.com/resellers/cpanel-widget</a> or contact <a href="mailto:resellerteam@godaddy.com">resellerteam@godaddy.com</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/Resellers">Resellers</a></p>
