--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <section>
       <h3>Example cPanel Widget</h3>
-        <form method="post" action="https://www.test.securepaynet-net.ide/gdshop/xt_orderform_addmany.asp?app_hdr=">
+        <form method="post" action="https://www.securepaynet.net/gdshop/xt_orderform_addmany.asp?app_hdr=">
       <input type="hidden" name="tcount" value="1">
       <input type="hidden" name="qty_1" value="1">
       <input type="hidden" name="item_1" value="1">
