--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <input type="hidden" name="tcount" value="1">
       <input type="hidden" name="qty_1" value="1">
       <input type="hidden" name="item_1" value="1">
-      <input type="hidden" name="prog_id" value="domainspricedright"> <!-- enter your prog_id -->
+      <input type="hidden" name="prog_id" value="domainspricedright"> <!-- 493501-->
       <select name="pf_id_1">
         <option value="32048">Economy - Linux cPanel - US Region - Monthly (recurring)</option>
         <option value="32051">Economy - Linux cPanel - US Region - 1 years (recurring)</option>
